feat(style): add main styling

--- a/BLOG-WIREFRAME.css
+++ b/BLOG-WIREFRAME.css
@@ -55,3 +55,32 @@ a {
 hr {
     border: solid 0.5px #6DE4EA;
 }
+
+.section {
+    margin: 0 140px;
+}
+
+.section h1 {
+    margin: 60px 0px 50px -20px ;
+    font-weight: 400;
+    font-size: 48px;
+}
+
+.article-box {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+.article {
+ border:grey 1px solid;
+ border-radius: 10px;
+ height: 655px; 
+ width: 686px;   
+}
+  
+.box {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+}
